--- a/select-with-image/src/index.css
+++ b/select-with-image/src/index.css
@@ -14,11 +14,13 @@ body {
     justify-content: center;
 }
 
-select {
+input {
     border: 1px solid transparent;
-    background-color: #f1f1f1;
+    background: #f1f1f1 url('../assets/arrow-down.png') 99% center no-repeat;
+    background-size: 1%;
     padding: 10px;
     font-size: 16px;
+    cursor: pointer;
 }
 
 #mySelect {
