feat: align menus to center

--- a/burger-menu/src/styles/index.css
+++ b/burger-menu/src/styles/index.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .menu-block {
@@ -18,4 +18,5 @@ body {
     align-items: center;
     overflow: hidden;
     border-radius: 50px;
+    margin-left: 10%;
 }
