--- a/left-menu/src/styles/index.css
+++ b/left-menu/src/styles/index.css
@@ -39,13 +39,8 @@ body {
     font-size: 1.5em;
 }
 
-.menu-btn {
-    width: 30px;
-    height: 30px;
-    background-color: #2e2e2e;
-    position: absolute;
-    right: -40px;
-    top: 10px;
+.menu-list a:hover {
+    text-decoration: underline;
 }
 
 .content {
