--- a/link-hovers/src/index.css
+++ b/link-hovers/src/index.css
@@ -2,12 +2,55 @@ body {
   margin: 0;
   font-family: sans-serif; }
 
+.wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10%; }
+
+nav ul li a::before, nav ul li::before, nav ul li::after {
+  content: '';
+  height: calc(100%/3);
+  width: 100%;
+  position: absolute;
+  background-color: #01ff70;
+  z-index: -1;
+  opacity: 0;
+  transition: .3s; }
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0; }
+  nav ul li {
+    list-style-type: none;
+    padding: 5px 10px;
+    margin: 0 5px;
+    cursor: pointer;
+    position: relative; }
+    nav ul li a {
+      text-decoration: none; }
+      nav ul li a::before {
+        top: calc(100%/3);
+        right: 0;
+        transform: translateX(10px); }
+    nav ul li::before {
+      top: 0;
+      left: 0;
+      transform: translateX(-10px); }
+    nav ul li::after {
+      left: 0;
+      bottom: 0;
+      transform: translateX(-10px); }
+    nav ul li:hover a::before, nav ul li:hover:before, nav ul li:hover:after {
+      opacity: 1;
+      transform: translateX(0); }
+
 .links {
-  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  margin: 10% 20%; }
+  margin: 0 20%; }
   .links a {
     text-decoration: none; }
 
