--- a/buttons/src/style.css
+++ b/buttons/src/style.css
@@ -11,14 +11,16 @@ body {
   justify-content: space-evenly; }
 
 .button {
-  background-color: #4c8bb0;
+  background-color: #4c8bb0; }
+  .button a {
+    text-decoration: none; }
+
+.flare {
   padding: 10px 20px;
   border-radius: 10px;
   position: relative;
   overflow: hidden; }
-  .button a {
-    text-decoration: none; }
-  .button::before {
+  .flare::before {
     content: '';
     height: 100%;
     width: 15px;
@@ -27,12 +29,34 @@ body {
     left: 0;
     background-color: rgba(255, 255, 255, 0.6);
     transform: skew(-40deg) translateX(-30px); }
-  .button:hover:before {
+  .flare:hover:before {
     animation: move-light .8s infinite; }
 @keyframes move-light {
   from {
     transform: skew(-40deg) translateX(-30px); }
   to {
     transform: skew(-40deg) translateX(150px); } }
+.border {
+  width: 130px;
+  height: 40px;
+  cursor: pointer;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 40px;
+  color: white;
+  position: relative; }
+  .border svg {
+    position: absolute;
+    left: 0;
+    top: 0; }
+    .border svg rect {
+      stroke: #122747;
+      stroke-width: 2;
+      transition: .8s;
+      stroke-dasharray: 400, 0; }
+  .border:hover svg rect {
+    stroke-width: 4;
+    stroke-dasharray: 50, 225;
+    stroke-dashoffset: 65; }
 
 /*# sourceMappingURL=style.css.map */
