--- a/buttons/src/style.css
+++ b/buttons/src/style.css
@@ -4,7 +4,7 @@ body {
 
 .wrapper {
   height: 100vh;
-  background-color: #9ce2dd;
+  background-color: #363636;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,5 +58,37 @@ body {
     stroke-width: 4;
     stroke-dasharray: 50, 225;
     stroke-dashoffset: 65; }
+
+.social .social__list {
+  list-style: none;
+  padding: 0;
+  display: flex; }
+  .social .social__list .social__item {
+    width: 50px;
+    height: 50px;
+    margin: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #000000;
+    border-radius: 50%;
+    font-size: 1.5em;
+    transition: color .3s, box-shadow .3s;
+    cursor: pointer; }
+    .social .social__list .social__item.vk:hover {
+      box-shadow: 0 0 25px #2b81af;
+      color: #2b81af; }
+    .social .social__list .social__item.instagram:hover {
+      box-shadow: 0 0 25px #d075ce;
+      color: #d075ce; }
+    .social .social__list .social__item.facebook:hover {
+      box-shadow: 0 0 25px #1f3892;
+      color: #1f3892; }
+    .social .social__list .social__item.google:hover {
+      box-shadow: 0 0 25px #c41919;
+      color: #c41919; }
+    .social .social__list .social__item.twitter:hover {
+      box-shadow: 0 0 25px #62b4c7;
+      color: #62b4c7; }
 
 /*# sourceMappingURL=style.css.map */
