--- a/buttons/src/style.css
+++ b/buttons/src/style.css
@@ -91,4 +91,58 @@ body {
       box-shadow: 0 0 25px #62b4c7;
       color: #62b4c7; }
 
+.neon {
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #4c8bb0;
+  background-color: #333;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-family: Consolas;
+  position: relative;
+  overflow: hidden;
+  transition: color .3s, background-color .3s, box-shadow .3s;
+  transition-delay: 1s; }
+  .neon .button__line {
+    position: absolute;
+    transition: 1s; }
+    .neon .button__line.button__line--top {
+      left: -100%;
+      top: 0;
+      background: linear-gradient(90deg, transparent, #4c8bb0);
+      width: 100%;
+      height: 2px;
+      transition-delay: .25s; }
+    .neon .button__line.button__line--bottom {
+      bottom: 0;
+      right: -100%;
+      background: linear-gradient(270deg, transparent, #4c8bb0);
+      width: 100%;
+      height: 2px;
+      transition-delay: .25s; }
+    .neon .button__line.button__line--right {
+      top: -100%;
+      right: 0;
+      background: linear-gradient(0deg, transparent, #4c8bb0);
+      width: 2px;
+      height: 100%; }
+    .neon .button__line.button__line--left {
+      bottom: -100%;
+      left: 0;
+      background: linear-gradient(180deg, transparent, #4c8bb0);
+      width: 2px;
+      height: 100%; }
+  .neon:hover {
+    color: #333;
+    background-color: #4c8bb0;
+    box-shadow: 0 0 15px #4c8bb0, 0 0 45px #4c8bb0; }
+    .neon:hover .button__line--top {
+      left: 100%; }
+    .neon:hover .button__line--bottom {
+      right: 100%; }
+    .neon:hover .button__line--right {
+      top: 100%; }
+    .neon:hover .button__line--left {
+      bottom: 100%; }
+
 /*# sourceMappingURL=style.css.map */
