--- a/buttons/src/style.scss
+++ b/buttons/src/style.scss
@@ -128,3 +128,77 @@ body {
     }
   }
 }
+
+.neon {
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #4c8bb0;
+  background-color: #333;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-family: Consolas;
+  position: relative;
+  overflow: hidden;
+  transition: color .3s, background-color .3s, box-shadow .3s;
+  transition-delay: 1s;
+
+  & .button__line {
+    position: absolute;
+    transition: 1s;
+
+    &.button__line--top {
+      left: -100%;
+      top: 0;
+      background: linear-gradient(90deg, transparent, #4c8bb0);
+      width: 100%;
+      height: 2px;
+      transition-delay: .25s;
+    }
+
+    &.button__line--bottom {
+      bottom: 0;
+      right: -100%;
+      background: linear-gradient(270deg, transparent, #4c8bb0);
+      width: 100%;
+      height: 2px;
+      transition-delay: .25s;
+    }
+
+    &.button__line--right {
+      top: -100%;
+      right: 0;
+      background: linear-gradient(0deg, transparent, #4c8bb0);
+      width: 2px;
+      height: 100%;
+    }
+
+    &.button__line--left {
+      bottom: -100%;
+      left: 0;
+      background: linear-gradient(180deg, transparent, #4c8bb0);
+      width: 2px;
+      height: 100%;
+
+    }
+
+  }
+
+  &:hover {
+    color: #333;
+    background-color: #4c8bb0;
+    box-shadow: 0 0 15px #4c8bb0, 0 0 45px #4c8bb0;
+
+    & .button__line--top {
+      left: 100%;
+    }
+    & .button__line--bottom {
+      right: 100%;
+    }
+    & .button__line--right {
+      top: 100%;
+    }
+    & .button__line--left {
+      bottom: 100%;
+    }
+  }
+}
