--- a/buttons/src/style.scss
+++ b/buttons/src/style.scss
@@ -61,6 +61,7 @@ body {
   line-height: 40px;
   color: white;
   position: relative;
+  box-shadow: 0 0 15px #4c8bb0;
 
   svg {
     position: absolute;
