--- a/card-hover/src/index.css
+++ b/card-hover/src/index.css
@@ -6,7 +6,8 @@
   box-sizing: border-box; }
 
 body {
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  background: linear-gradient(#599a4b, #092240); }
 
 .wrap {
   height: 100vh;
@@ -15,7 +16,7 @@ body {
   justify-content: space-evenly;
   align-items: center; }
 
-figure::before, figure::after {
+.translate-card figure::before, .translate-card figure::after {
   content: '';
   position: absolute;
   left: 5px;
@@ -24,7 +25,7 @@ figure::before, figure::after {
   bottom: 5px;
   transition: .2s; }
 
-figure {
+.translate-card figure {
   height: 30%;
   width: 20%;
   background-color: #39b494;
@@ -34,33 +35,91 @@ figure {
   text-align: center;
   position: relative;
   overflow: hidden; }
-  figure h2 {
+  .translate-card figure h2 {
     padding-bottom: 20px;
     transition: transform .2s ease;
     transform: translateY(50px); }
-  figure p {
+  .translate-card figure p {
     margin: 10px;
     border: 1px solid #1f4019;
     background-color: #cbcec8;
     transition: transform .2s ease, opacity .2s ease;
     transform: translateY(150px);
     opacity: 0; }
-  figure::before {
+  .translate-card figure::before {
     border-bottom: 2px solid black;
     border-top: 2px solid black;
     transform: scaleX(0); }
-  figure::after {
+  .translate-card figure::after {
     border-left: 2px solid black;
     border-right: 2px solid black;
     transform: scaleY(0); }
-  figure:hover:before {
+  .translate-card figure:hover:before {
     transform: scaleX(1); }
-  figure:hover:after {
+  .translate-card figure:hover:after {
     transform: scaleY(1); }
-  figure:hover h2 {
+  .translate-card figure:hover h2 {
     transform: translateY(0); }
-  figure:hover p {
+  .translate-card figure:hover p {
     transform: translateY(0);
     opacity: 1; }
+
+.social-card figure {
+  height: 400px;
+  width: 250px;
+  background: url("https://images.pexels.com/photos/4142982/pexels-photo-4142982.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  position: relative; }
+  .social-card figure figcaption {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
+    .social-card figure figcaption h2 {
+      font-size: 30px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-align: center;
+      padding-top: 40px;
+      transition: .3s;
+      transform: translateY(100%); }
+    .social-card figure figcaption ul {
+      position: absolute;
+      bottom: 10px;
+      right: 15px;
+      list-style-type: none;
+      display: flex;
+      flex-direction: row; }
+      .social-card figure figcaption ul li {
+        padding: 0 10px;
+        font-size: 20px;
+        color: #ffffff;
+        transition: .3s;
+        transform: translateY(200%); }
+        .social-card figure figcaption ul li:nth-child(1) {
+          transition-delay: .2s; }
+        .social-card figure figcaption ul li:nth-child(2) {
+          transition-delay: .1s; }
+        .social-card figure figcaption ul li:hover {
+          color: #399027; }
+  .social-card figure:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    clip-path: polygon(0 100%, 100% 0, 100% 100%);
+    height: 0;
+    transition: .3s;
+    transition-delay: .1s;
+    transform-origin: bottom; }
+  .social-card figure:hover:before {
+    height: 100px; }
+  .social-card figure:hover li, .social-card figure:hover h2 {
+    transform: translateY(0);
+    letter-spacing: 5px; }
 
 /*# sourceMappingURL=index.css.map */
