--- a/card-hover/src/index.scss
+++ b/card-hover/src/index.scss
@@ -8,6 +8,7 @@
 
 body {
   font-family: sans-serif;
+  background: linear-gradient(#599a4b, #092240);
 }
 
 .wrap {
@@ -28,7 +29,7 @@ body {
   transition: .2s;
 }
 
-figure {
+.translate-card figure {
   height: 30%;
   width: 20%;
   background-color: #39b494;
@@ -82,6 +83,86 @@ figure {
     & p {
       transform: translateY(0);
       opacity: 1;
+    }
+  }
+}
+
+.social-card figure {
+  height: 400px;
+  width: 250px;
+  background: url("https://images.pexels.com/photos/4142982/pexels-photo-4142982.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
+
+  & figcaption {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    & h2 {
+      font-size: 30px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-align: center;
+      padding-top: 40px;
+      transition: .3s;
+      transform: translateY(100%);
+    }
+
+    & ul {
+      position: absolute;
+      bottom: 10px;
+      right: 15px;
+      list-style-type: none;
+      display: flex;
+      flex-direction: row;
+
+      & li {
+        padding: 0 10px;
+        font-size: 20px;
+        color: #ffffff;
+        transition: .3s;
+        transform: translateY(200%);
+
+        &:nth-child(1) {
+          transition-delay: .2s;
+        }
+
+        &:nth-child(2) {
+          transition-delay: .1s;
+        }
+
+        &:hover {
+          color: #399027;
+        }
+      }
+    }
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.3);
+    clip-path: polygon(0 100%, 100% 0, 100% 100%);
+    height: 0;
+    transition: .3s;
+    transition-delay: .1s;
+    transform-origin: bottom;
+  }
+
+  &:hover {
+    &:before {
+      height: 100px;
+    }
+    & li, h2 {
+      transform: translateY(0);
+      letter-spacing: 5px;
     }
   }
 }
