--- a/trace/src/index.css
+++ b/trace/src/index.css
@@ -10,6 +10,7 @@ body {
 }
 
 .foot{
+    position: relative;
     width: 250px;
     height: 400px;
     background: url("../assets/full.png") no-repeat top left;
@@ -19,26 +20,48 @@ body {
 }
 
 .high {
-    height: 50%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 48%;
+    clip-path: polygon(8% 100%, 4% 82%, 4% 68%, 7% 50%, 11% 35%, 26% 8%, 37% 4%, 44% 2%, 68% 2%, 70% 2%, 82% 20%, 84% 25%, 85% 34%, 87% 53%, 86% 62%, 84% 70%, 73% 90%);
+    transition: .3s;
+    transform: translateY(0);
 }
 
 .middle {
-    height: 23%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 45%;
+    bottom: 25%;
+    clip-path: polygon(14% 89%, 14% 74%, 14% 64%, 14% 50%, 12% 37%, 10% 24%, 70% 9%, 68% 14%, 66% 28%, 66% 46%, 66% 59%, 69% 71%, 71% 82%, 50% 92%, 20% 92%);
+    transition: .3s;
+    transform: translateY(0);
 }
 
 .low {
-    height: 27%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 62%;
+    bottom: 0;
+    clip-path: polygon(28% 90%, 18% 74%, 15% 64%, 13% 50%, 12% 36%, 12% 26%, 34% 31%, 59% 27%, 72% 20%, 73% 46%, 73% 59%, 72% 71%, 67% 82%, 58% 92%, 43% 97%);
+    transition: .3s;
+    transform: translateY(0);
 }
 
 .high:hover,
 .middle:hover,
 .low:hover {
-    background-color: rgba(157, 184, 132, 0.2);
-    border: 1px solid rgb(157, 184, 132);
+    background-color: rgba(75, 114, 37, 0.7);
+    transform: translateY(1);
 }
 
 .active {
-    background-color: rgba(157, 184, 132, 0.4);
+    background-color: rgba(100, 137, 66, 0.5);
+    transform: translateY(1);
 }
 
 .extra {
