--- a/select-with-image/src/index.css
+++ b/select-with-image/src/index.css
@@ -60,6 +60,12 @@ input {
 }
 
 .select-items .item:hover {
-    background-color: #e9e9e9;
+    background-color: #e1e4f3;
+    border-color: #0d3349;
+}
+
+.select-items .item.active {
+    background-color: #e1e4f3;
+    border-color: #0d3349;
 }
 
